Changelog
=========

1.1.1 (unreleased)
------------------

- Support dexterity.  The templates folder and the target folder can
  be a dexterity container.  The copied items can be dexterity items.
  [maurits]


1.1 (2013-08-26)
----------------

- Refactor template factory, so that it is more customizable.
  [mathias.leimgruber]

- Add contenttype class in menu, so the sprites are used there as well.
  [Julian Infanger]


1.0 (2013-05-24)
----------------

- Initial release