@@ -4,6 +4,11 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
+- Support creating from templates on the site root.  Note that the
+  action is not registered there, only on folders, but at least the
+  form can be called, if you want to.
+  [maurits]
+
 - Support dexterity.  The templates folder and the target folder can
   be a dexterity container.  The copied items can be dexterity items.
   [maurits]
